@@ -123,6 +123,7 @@ CFolderActionSet.description=C Folder Action Set
 
 # Task Action
 DeleteTaskAction.label=Delete C/C++ Markers
+DeleteIProblemMarkerAction.label=Delete IProblem Markers
 
 # C/C++ Search
 CSearchPage.label= C/C++ Search
